Algunas sugerencias sobre el proyecto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
     <h1>Colaboraion GitHub</h1>
-<p>Textos....</p>
+    <hr>
+    <p>Participantes</p>
+    <ul>
+        <li>Abel</li>
+        <li>Maxi</li>
+    </ul>
+    <hr>
+    <p>Textos...</p>
 </body>
 </html>
